<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<android.support.v7.widget.CardView
			android:id="@+id/phone_info_card"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:cardUseCompatPadding="true"
			app:elevation="2dp">
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				android:paddingBottom="@dimen/activity_vertical_margin">
				<TextView
					android:id="@+id/phone_info_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="12dp"
					android:text="@string/phone_info_title"/>
				<View
					android:layout_width="6dp"
					android:layout_height="wrap_content"
					android:layout_alignTop="@id/phone_info_title"
					android:layout_alignBottom="@id/phone_info_title"
					android:background="@color/colorPrimary"/>

				<TextView
					android:id="@+id/network_type_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/phone_info_title"
					android:text="@string/network_type_title"/>
				<TextView
					android:id="@+id/network_type"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/network_type_title"/>
				<TextView
					android:id="@+id/network_provider_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/isp_title"
					android:layout_marginLeft="77dp"
					android:layout_marginStart="77dp"
					android:layout_below="@+id/phone_info_title"
					android:layout_toRightOf="@+id/bsss_title"
					android:layout_toEndOf="@+id/bsss_title" />
				<TextView
					android:id="@+id/network_provider"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/network_provider_title" />
				<TextView
					android:id="@+id/lac_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/network_provider"
					android:text="@string/lac_title"/>
				<TextView
					android:id="@+id/lac"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/lac_title" />
				<TextView
					android:id="@+id/cid_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/cid_title"
					android:layout_alignTop="@+id/lac_title"
					android:layout_alignLeft="@+id/network_provider_title"
					android:layout_alignStart="@+id/network_provider_title" />
				<TextView
					android:id="@+id/cid"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/cid_title" />
				<TextView
					android:id="@+id/bsss_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/cid"
					android:text="@string/station_strength_title"/>
				<TextView
					android:id="@+id/bsss"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/bsss_title" />
			</RelativeLayout>
		</android.support.v7.widget.CardView>
		<android.support.v7.widget.CardView
			android:id="@+id/nearby_base_station_card"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/phone_info_card"
			app:cardUseCompatPadding="true"
			app:elevation="2dp">
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				android:paddingBottom="@dimen/activity_vertical_margin">
				<TextView
					android:id="@+id/nearby_base_station_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="12dp"
					tools:text="邻近基站"/>
				<View
					android:layout_width="6dp"
					android:layout_height="wrap_content"
					android:layout_alignTop="@id/nearby_base_station_title"
					android:layout_alignBottom="@id/nearby_base_station_title"
					android:background="@color/colorPrimary"/>

				<LinearLayout
					android:id="@+id/nearby_base_station_list"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"/>
			</RelativeLayout>
		</android.support.v7.widget.CardView>
		<android.support.v7.widget.CardView
			android:id="@+id/location_card"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/nearby_base_station_card"
			app:cardUseCompatPadding="true"
			app:elevation="2dp"
			android:layout_alignParentBottom="true">
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<RelativeLayout
					android:id="@+id/location_card_title"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:paddingTop="@dimen/activity_vertical_margin"
					android:paddingBottom="@dimen/activity_vertical_margin"
					android:layout_alignParentTop="true"
					android:layout_alignParentLeft="true"
					android:layout_alignParentStart="true">
					<TextView
						android:id="@+id/location_title"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="12dp"
						tools:text="基站定位"/>
					<View
						android:layout_width="6dp"
						android:layout_height="wrap_content"
						android:layout_alignTop="@id/location_title"
						android:layout_alignBottom="@id/location_title"
						android:background="@color/colorPrimary"/>
				</RelativeLayout>
			</RelativeLayout>
		</android.support.v7.widget.CardView>
	</RelativeLayout>
</ScrollView>